<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.moviedetails.MovieDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="51dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/film_title_localized_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:text="Movie localized name"
        style="@style/film_title_localized_name_theme"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/film_title_name"
        style="@style/film_title_name_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/film_title_localized_name"
        tools:text="Movie no localized name"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_overview_genre"
        style="@style/text_overline_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/overview_genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/film_title_name"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_label_info"
        style="@style/text_overview_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/missing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_overview_genre"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/film_group_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_info"/>

    <View
        android:id="@+id/view_divider_first"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/film_group_genre"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/film_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/view_divider_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_first"
        tools:text="7.666"
        style="@style/film_data_theme"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rating"
        app:layout_constraintEnd_toEndOf="@+id/film_rating"
        app:layout_constraintStart_toStartOf="@+id/film_rating"
        app:layout_constraintTop_toBottomOf="@+id/film_rating"
        style="@style/film_data_label_theme"/>

    <View
        android:id="@+id/view_divider_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view_divider_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_first"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/film_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_divider_vertical"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_first"
        tools:text="1998"
        style="@style/film_data_theme"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/release_date"
        app:layout_constraintEnd_toEndOf="@+id/film_year"
        app:layout_constraintStart_toStartOf="@+id/film_year"
        app:layout_constraintTop_toBottomOf="@+id/film_year"
        style="@style/film_data_label_theme"/>

    <View
        android:id="@+id/view_divider_second"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="144dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_divider_first"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_overview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/overview_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_second"
        style="@style/text_overline_theme"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/film_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_overview_description"
        style="@style/text_overview_theme"/>

</androidx.constraintlayout.widget.ConstraintLayout>